--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Include your project-specific ignores in this file
-# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
-# Useful .gitignore templates: https://github.com/github/gitignore
-
 # Numerous always-ignore extensions
 *.diff
 *.err
@@ -42,5 +38,6 @@ intermediate
 node_modules
 publish
 .idea
+doc
 
 httpdocs/keep_secure.php
